--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section>
         <div>
             <h2 id="poach">Poaching Method</h2>
-            <p>text holder</p>
+            <p id="main-method">text holder</p>
         </div>
 
         <div>
@@ -55,10 +55,11 @@
             <p>text holder</p>
         </div>
     </section>
+    <div class="divider"></div>
     <section>
         <div>
             <h2 id="saute">Sauté Method</h2>
-            <p>text holder</p>
+            <p id="main-method">text holder</p>
         </div>
 
         <div>
@@ -76,10 +77,11 @@
             <p>text holder</p>
         </div>
     </section>
+    <div class="divider"></div>
     <section>
         <div>
             <h2 id="boil">Boiling Method</h2>
-            <p>text holder</p>
+            <p id="main-method">text holder</p>
         </div>
 
         <div>
@@ -97,7 +99,6 @@
             <p>text holder</p>
         </div>
     </section>
-
     <section>
         <div>
             <h2>End Note</h2>
