Add most of the text.

--- a/index.html
+++ b/index.html
@@ -37,51 +37,247 @@
     <section>
         <div>
             <h2 id="poach">Poaching Method</h2>
-            <p id="main-method">text holder</p>
+            <p id="main-method">Poaching means to cook something in a liquid, mostly water, at a temperature between
+                65 and 75°C. However, that doesn't always need to be the case and you will see what I mean in a
+                minute.</p>
         </div>
 
         <div>
             <h4>Poached Eggs</h4>
-            <p>text holder</p>
+            <p>Poached eggs are a beautiful and tasty way of cooking eggs. The eggwhites solidify, forming a sort of
+                layer for the yolk to stay runny.</p>
+
+            <table>
+                <tr>
+                    <th>What to Do.</th>
+                    <th>Why to do it.</th>
+                    <th>Information</th>
+                </tr>
+                <tr>
+                    <td>You will need 2 bowls, one to crack the eggs in, one to keep them in. Crack the Eggs in one bowl
+                        one by one, without damaging the yolk.</td>
+                    <td>In case one of the yolks gets damaged, you can still use it for another dish.</td>
+                    <td>Use eggs as fresh as possible. The older the egg the more likely it is to not hold together,
+                        even with the vinegar water.
+                        Poached eggs are amazing served on toast, spinach or on rice with a little bit of buttersauce,
+                        currysauce
+                        or any sauce of your liking.</td>
+
+                </tr>
+                <tr>
+                    <td>You will need vinegar water, 1 dl vinegar per liter of water. Heat up the water until before the
+                        boiling point.</td>
+                    <td>The vinegar's acidity has the role of keeping the eggwhites togheter the moment we put them in
+                        the water. Don't salt the water, as it has the opposite effect.</td>
+                </tr>
+                <tr>
+                    <td>Carefully place the eggs in the water and poach them for about 3 Minutes.</td>
+                    <td>The whites need to be solid, while the yolk remains liquidy.</td>
+                </tr>
+                <tr>
+                    <td>Take the eggs out and cut off the stringy bits. Dip them in hot saltwater for just a second and
+                        dry them with a papertowel.</td>
+                    <td>The vinegar water gets cleaned off.</td>
+                </tr>
+            </table>
+
         </div>
 
         <div>
-            <h4>Scambled Eggs</h4>
-            <p>text holder</p>
+            <h4>Scrambled Eggs</h4>
+            <p>Yep scrambled eggs are poached. They are one of the exceptions to the rule, because you don't poach them
+                in a liquid,
+                but because of the low temperature used and the fact that, well, the mass is liquid, you call it
+                poaching.</p>
+            <table>
+                <tr>
+                    <th>What to Do.</th>
+                    <th>Why to do it.</th>
+                    <th>Information</th>
+                </tr>
+                <tr>
+                    <td>Crack the eggs in a bowl, whisk them really well, strain them and season them.</td>
+                    <td>If you don't whisk the eggs enough, you will have white strips in your scrabled eggs. Strain
+                        them, in case of eggshels falling in the mass.</td>
+                    <td>I like to not salt the eggs too much when i cook for somebody else as well, because everyone has
+                        diffent preferenced when it comes to the taste of salt on eggs.</td>
+
+                </tr>
+                <tr>
+                    <td>Heat some butter in a pan and sear any pre-cooked inlay you want. I like bacon, mushrooms,
+                        shallots and tomatoes. Dill is also a very good herb for scrabled eggs.</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Add the eggs and cook on low heat, while stirring regularly.</td>
+                    <td>So that you get a fluffy, creamy composition, the eggs need to be poached on low heat and
+                        stirred.</td>
+                </tr>
+                <tr>
+                    <td>Add cream or milk.</td>
+                    <td>So that the poaching process stops and to refine the mass.</td>
+                </tr>
+            </table>
         </div>
 
         <div>
             <h4>Eggs In The Potty</h4>
-            <p>text holder</p>
+            <p>This is one of my favourites. But i have to say I don't always have the patience to make the dish. As any
+                other egg dish, it's really good for breakfast or brunch.</p>
         </div>
+        <table>
+            <tr>
+                <th>What to Do.</th>
+                <th>Why to do it.</th>
+                <th>Information</th>
+            </tr>
+            <tr>
+                <td>Butter the cocottes and any inlay you want. I like asparagus tips, chicken breast or, of course,
+                    bacon. If you don't have cocottes, you can use any heat resistant kitchendish you have. Porcelain
+                    dishes, for example.</td>
+                <td>Buttering the cocottes keeps the eggs and inlay from sticking.</td>
+                <td>Depending on your oven and how you like the eggs, you can play a bit with the time. You don't have
+                    to cover them, but if you don't, i would suggest to put a bowl of boiling water at the bottom of the
+                    over, so that the eggs are firm at the top.</td>
+
+            </tr>
+            <tr>
+                <td>Separate the eggwhites and yolks, without damaging the yolks and whisk the eggwhites one by one.
+                </td>
+                <td>So that you have one egg per cocotte.</td>
+            </tr>
+            <tr>
+                <td>Put one eggwhite in the cocotte and place the yolk in the middle. Season the eggwhites and place a
+                    little bit of butter on top.</td>
+                <td>We don't salt the yolks, because salt makes them have white points.</td>
+            </tr>
+            <tr>
+                <td>Cover them and poach them in the oven at 75°C for about 10 Minutes.</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>When the eggs are done, cover the whites with sauce. I like to use a butter sauce or a herb cream
+                    sauce.</td>
+                <td>We cover only the whites, so that the yolks are visible and stay runny.</td>
+            </tr>
+        </table>
     </section>
     <div class="divider"></div>
     <section>
         <div>
             <h2 id="saute">Sauté Method</h2>
-            <p id="main-method">text holder</p>
+            <p id="main-method">Sauté or Searing, is cooking something in a pan with little to no external fat from 160
+                to 240°C. Our little egg friends are, once again, an exception to the rule. The temperature being the
+                reason. Because you don't always want to cook them at a too high temperature, even if you sear them.</p>
         </div>
 
         <div>
             <h4>Fried Eggs</h4>
-            <p>text holder</p>
+            <p>I disagree with the english name for this dish. Because to fry something you need to cover it entirely
+                with oil, which you don't do to "fried eggs". But nonetheless, let's get to it!</p>
+            <table>
+                <tr>
+                    <th>What to Do.</th>
+                    <th>Why to do it.</th>
+                    <th>Information</th>
+                </tr>
+                <tr>
+                    <td>Heat up some butter in a non-stick pan.</td>
+                    <td></td>
+                    <td>I like to use fresh eggs, because they are more compact. Don't use to much heat or the eggs are
+                        going to get brown edges. Unless you are like me and you like brown edges. :D</td>
+
+                </tr>
+                <tr>
+                    <td>Crack the eggs one by one in a bowl and carefully add them in the pan.</td>
+                    <td>We don't want the yolks to get damaged.</td>
+                </tr>
+                <tr>
+                    <td>Cook on medium heat and season just the eggwhites.</td>
+                    <td>Salt makes the yolks have white points on them.</td>
+            </table>
         </div>
 
         <div>
             <h4>French Omelette</h4>
-            <p>text holder</p>
+            <p>Omellete is what most people call scrambled eggs and I can see why, however, it's wrong. It's because you
+                don't whisk your omellete to the very end, you want your omellete mass to stay together while having a
+                firm, almost runny consistency in the middle.</p>
+            <table>
+                <tr>
+                    <th>What to Do.</th>
+                    <th>Why to do it.</th>
+                    <th>Information</th>
+                </tr>
+                <tr>
+                    <td>Crack the eggs in a bowl, whisk them well, strain them and season.</td>
+                    <td>If you don't whisk the eggs enough, you will have white strips in your scrabled eggs. Strain
+                        them, in case of eggshels falling in the mass.</td>
+                    <td>You can add your garnish either in the raw mass or on top of the omellete before closing it. I
+                        like to use tomatoes, chicken, onions and potatoes. I also like to brush a bit of butter on the
+                        closed omellete, it makes it have a bit of a glow.</td>
+
+                </tr>
+                <tr>
+                    <td>High heat. Heat up some butter in a pan, add the eggs and cook them for about 1 minute while
+                        constatly stirring and moving the pan.</td>
+                    <td>The mass cooks evenly and doesn't stick.</td>
+                </tr>
+                <tr>
+                    <td>Towards the end no longer stir, just keep the mass from sticking by carefully shifting the pan.
+                    </td>
+                    <td>This also helps to build a beautiful outer layer.</td>
+                </tr>
+                <tr>
+                    <td>Carefully roll your omelette with a spatula or a fork.</td>
+                    <td>This is how you get our omellete to it's oval form.</td>
+                </tr>
+                <tr>
+                    <td>With a light fist hit on the pan handle completely loosen the omelette from the pan and fold the
+                        ends towards the middle.</td>
+                    <td>The omelette gets closed.</td>
+                </tr>
+            </table>
         </div>
 
         <div>
             <h4>Spanish Omelette</h4>
-            <p>text holder</p>
+            <p>Similar to the French one, but we don't stir it at all. We cook it on low heat and covered.</p>
+            <table>
+                <tr>
+                    <th>What to Do.</th>
+                    <th>Why to do it.</th>
+                    <th>Information</th>
+                </tr>
+                <tr>
+                    <td>Crack the eggs in a bowl, whisk them well, strain them and season.</td>
+                    <td>If you don't whisk the eggs enough, you will have white strips in your scrabled eggs. Strain
+                        them, in case of eggshels falling in the mass.</td>
+                    <td>You can add garnish either by searing it in the pan before adding the omelette or after it's
+                        cooked on top of the omelette. I like to add tomatoes, ham, mushrooms, onions and a must be
+                        for the spanish omelette, potatoes.</td>
+
+                </tr>
+                <tr>
+                    <td>Low-medium heat. Heat up some butter in a pan and add your egg mass. Cover the pan and cook for
+                        about 15 minutes, without stirring or moving the pan.</td>
+                    <td>We use low temperature so that the mass doesn't brown and we cover it so that it can cook
+                        evenly.</td>
+                </tr>
+                <tr>
+                    <td>Medium heat. Take off the lid and use a plate to turn the omelette and cook it again for about 2
+                        minutes.</td>
+                    <td>This way the other side also gets a nice layer.</td>
+                </tr>
+            </table>
         </div>
     </section>
     <div class="divider"></div>
     <section>
         <div>
             <h2 id="boil">Boiling Method</h2>
-            <p id="main-method">text holder</p>
+            <p id="main-method">The most common way to cook an egg. It's easy, tasty and fast. Who doesn't love boiled
+                eggs?</p>
         </div>
 
         <div>
