Add the rest of the images, media queries and fixed some padding.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
         <img id="header-egg" src="assets/images/header-egg-image.jpg"
-            alt="Image of a cracked egg with a light green background" width="300px" height="200px">
+            alt="Image of a cracked egg with a light green background." width="300px" height="200px">
         <h1 id="intro">The Perfect Egg</h1>
         <nav>
             <a href="#intro">Introduction</a>
@@ -40,20 +40,23 @@
     <section>
         <div>
             <h2 id="poach">Poaching Method</h2>
-            <p id="main-method">Poaching means to cook something in a liquid, mostly water, at a temperature between
+            <p class="main-method">Poaching means to cook something in a liquid, mostly water, at a temperature between
                 65 and 75°C. However, that doesn't always need to be the case and you will see what I mean in a
                 minute.</p>
         </div>
 
         <div>
             <h4>Poached Eggs</h4>
+            <img class="egg-image" src="assets/images/poached-egg.jpg"
+                alt="Image a cut poached egg with parsley on top." width="300px" height="200px">
             <p>Poached eggs are a beautiful and tasty way of cooking eggs. The eggwhites solidify, forming a sort of
                 layer for the yolk to stay runny.</p>
-
+            <br>
+            <br>
             <table>
                 <tr>
-                    <th class="white">What to Do.</th>
-                    <th class="yellow">Why to do it.</th>
+                    <th class="white">What to Do</th>
+                    <th class="yellow">Why to do it</th>
                     <th class="white">Information</th>
                 </tr>
                 <tr>
@@ -98,14 +101,18 @@
 
         <div>
             <h4>Scrambled Eggs</h4>
+            <img class="egg-image" src="assets/images/scrambled-egg.jpg"
+                alt="Image of a plate of scrambled eggs with chives on top." width="300px" height="200px">
             <p>Yep scrambled eggs are poached. They are one of the exceptions to the rule, because you don't poach them
                 in a liquid,
                 but because of the low temperature used and the fact that, well, the mass is liquid, you call it
                 poaching.</p>
+            <br>
+            <br>
             <table>
                 <tr>
-                    <th class="white">What to Do.</th>
-                    <th class="yellow">Why to do it.</th>
+                    <th class="white">What to Do</th>
+                    <th class="yellow">Why to do it</th>
                     <th class="white">Information</th>
                 </tr>
                 <tr>
@@ -141,13 +148,17 @@
 
         <div>
             <h4>Eggs In The Potty</h4>
+            <img class="egg-image" src="assets/images/egg-in-the-potty.jpg" alt="Image of eggs in cocottes."
+                width="300px" height="200px">
             <p>This is one of my favourites. But i have to say I don't always have the patience to make the dish. As any
                 other egg dish, it's really good for breakfast or brunch.</p>
+            <br>
+            <br>
         </div>
         <table>
             <tr>
-                <th class="white">What to Do.</th>
-                <th class="yellow">Why to do it.</th>
+                <th class="white">What to Do</th>
+                <th class="yellow">Why to do it</th>
                 <th class="white">Information</th>
             </tr>
             <tr>
@@ -191,19 +202,26 @@
     <section>
         <div>
             <h2 id="saute">Sauté Method</h2>
-            <p id="main-method">Sauté or Searing, is cooking something in a pan with little to no external fat from 160
+            <p class="main-method">Sauté or Searing, is cooking something in a pan with little to no external fat from
+                160
                 to 240°C. Our little egg friends are, once again, an exception to the rule. The temperature being the
                 reason. Because you don't always want to cook them at a too high temperature, even if you sear them.</p>
+            <br>
+            <br>
         </div>
 
         <div>
             <h4>Fried Eggs</h4>
+            <img class="egg-image" src="assets/images/fried-egg.jpg" alt="Image of a fried egg." width="300px"
+                height="200px">
             <p>I disagree with the english name for this dish. Because to fry something you need to cover it entirely
                 with oil, which you don't do to "fried eggs". But nonetheless, let's get to it!</p>
+            <br>
+            <br>
             <table>
                 <tr>
-                    <th class="white">What to Do.</th>
-                    <th class="yellow">Why to do it.</th>
+                    <th class="white">What to Do</th>
+                    <th class="yellow">Why to do it</th>
                     <th class="white">Information</th>
                 </tr>
                 <tr>
@@ -227,13 +245,17 @@
 
         <div>
             <h4>French Omelette</h4>
+            <img class="egg-image" src="assets/images/french-omelette.jpg" alt="Image of a plate of french omelette."
+                width="300px" height="200px">
             <p>Omellete is what most people call scrambled eggs and I can see why, however, it's wrong. It's because you
                 don't whisk your omellete to the very end, you want your omellete mass to stay together while having a
                 firm, almost runny consistency in the middle.</p>
+            <br>
+            <br>
             <table>
                 <tr>
-                    <th class="white">What to Do.</th>
-                    <th class="yellow">Why to do it.</th>
+                    <th class="white">What to Do</th>
+                    <th class="yellow">Why to do it</th>
                     <th class="white">Information</th>
                 </tr>
                 <tr>
@@ -275,11 +297,15 @@
 
         <div>
             <h4>Spanish Omelette</h4>
+            <img class="egg-image" src="assets/images/spanish-omelette.jpg" alt="Image of a pan of spanish omelette."
+                width="300px" height="200px">
             <p>Similar to the French one, but we don't stir it at all. We cook it on low heat and covered.</p>
+            <br>
+            <br>
             <table>
                 <tr>
-                    <th class="white">What to Do.</th>
-                    <th class="yellow">Why to do it.</th>
+                    <th class="white">What to Do</th>
+                    <th class="yellow">Why to do it</th>
                     <th class="white">Information</th>
                 </tr>
                 <tr>
@@ -315,17 +341,19 @@
     <section>
         <div>
             <h2 id="boil">Boiling Method</h2>
-            <p id="main-method">The most common way to cook an egg. It's easy, tasty and fast. Who doesn't love boiled
+            <p class="main-method">The most common way to cook an egg. It's easy, tasty and fast. Who doesn't love
+                boiled
                 eggs?</p>
         </div>
 
         <div>
             <h4>Boiled Egg</h4>
-            <p></p>
+            <img class="egg-image" src="assets/images/boiled-egg.jpg"
+                alt="Image of 3 boiled eggs. One cut in 2 halves and 2 whole." width="300px" height="200px">
             <table>
                 <tr>
-                    <th class="white">What to Do.</th>
-                    <th class="yellow">Why to do it.</th>
+                    <th class="white">What to Do</th>
+                    <th class="yellow">Why to do it</th>
                     <th class="white">Information</th>
                 </tr>
                 <tr>
@@ -382,5 +410,7 @@
 </body>
 
 <script src="https://kit.fontawesome.com/e62c0f3d3d.js" crossorigin="anonymous"></script>
+
+<!--All images were taken from https://stock.adobe.com-->
 
 </html>
