Fixed the navigation bar position to the top of the screen and add media query for it.

--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
         <img id="header-egg" src="assets/images/header-egg-image.jpg"
             alt="Image of a cracked egg with a light green background." width="300px" height="200px">
         <h1 id="intro">The Perfect Egg</h1>
+        <div class="divider"></div>
         <nav>
             <a href="#intro">Introduction</a>
             <a href="#poach">Poaching Method</a>
             <a href="#saute">Sauté Method</a>
             <a href="#boil">Boiling Method</a>
-            <a href="#social-links">Social Media Links</a>
+            <a href="#social-links">Social Media</a>
         </nav>
     </header>
 
