Add Readme.md file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
         <img id="header-egg" src="assets/images/header-egg-image.jpg"
-            alt="Image of a cracked egg with a light green background." width="300px" height="200px">
+            alt="Image of a cracked egg with a light green background.">
         <h1 id="intro">The Perfect Egg</h1>
         <div class="divider"></div>
         <nav>
@@ -49,7 +49,7 @@
         <div>
             <h4>Poached Eggs</h4>
             <img class="egg-image" src="assets/images/poached-egg.jpg"
-                alt="Image a cut poached egg with parsley on top." width="300px" height="200px">
+                alt="Image a cut poached egg with parsley on top.">
             <p>Poached eggs are a beautiful and tasty way of cooking eggs. The eggwhites solidify, forming a sort of
                 layer for the yolk to stay runny.</p>
             <br>
@@ -66,7 +66,7 @@
                         one by one, without damaging the yolk.</td>
                     <td class="yellow">In case one of the yolks gets damaged, you can still use it for another dish.
                     </td>
-                    <td class="white" rowspan="4" class="b">Use eggs as fresh as possible. The older the egg the more
+                    <td class="white" rowspan="4">Use eggs as fresh as possible. The older the egg the more
                         likely it
                         is
                         to not hold
@@ -103,7 +103,7 @@
         <div>
             <h4>Scrambled Eggs</h4>
             <img class="egg-image" src="assets/images/scrambled-egg.jpg"
-                alt="Image of a plate of scrambled eggs with chives on top." width="300px" height="200px">
+                alt="Image of a plate of scrambled eggs with chives on top.">
             <p>Yep scrambled eggs are poached. They are one of the exceptions to the rule, because you don't poach them
                 in a liquid,
                 but because of the low temperature used and the fact that, well, the mass is liquid, you call it
@@ -149,8 +149,7 @@
 
         <div>
             <h4>Eggs In The Potty</h4>
-            <img class="egg-image" src="assets/images/egg-in-the-potty.jpg" alt="Image of eggs in cocottes."
-                width="300px" height="200px">
+            <img class="egg-image" src="assets/images/egg-in-the-potty.jpg" alt="Image of eggs in cocottes.">
             <p>This is one of my favourites. But i have to say I don't always have the patience to make the dish. As any
                 other egg dish, it's really good for breakfast or brunch.</p>
             <br>
@@ -213,8 +212,7 @@
 
         <div>
             <h4>Fried Eggs</h4>
-            <img class="egg-image" src="assets/images/fried-egg.jpg" alt="Image of a fried egg." width="300px"
-                height="200px">
+            <img class="egg-image" src="assets/images/fried-egg.jpg" alt="Image of a fried egg.">
             <p>I disagree with the english name for this dish. Because to fry something you need to cover it entirely
                 with oil, which you don't do to "fried eggs". But nonetheless, let's get to it!</p>
             <br>
@@ -246,8 +244,7 @@
 
         <div>
             <h4>French Omelette</h4>
-            <img class="egg-image" src="assets/images/french-omelette.jpg" alt="Image of a plate of french omelette."
-                width="300px" height="200px">
+            <img class="egg-image" src="assets/images/french-omelette.jpg" alt="Image of a plate of french omelette.">
             <p>Omellete is what most people call scrambled eggs and I can see why, however, it's wrong. It's because you
                 don't whisk your omellete to the very end, you want your omellete mass to stay together while having a
                 firm, almost runny consistency in the middle.</p>
@@ -298,8 +295,7 @@
 
         <div>
             <h4>Spanish Omelette</h4>
-            <img class="egg-image" src="assets/images/spanish-omelette.jpg" alt="Image of a pan of spanish omelette."
-                width="300px" height="200px">
+            <img class="egg-image" src="assets/images/spanish-omelette.jpg" alt="Image of a pan of spanish omelette.">
             <p>Similar to the French one, but we don't stir it at all. We cook it on low heat and covered.</p>
             <br>
             <br>
@@ -350,7 +346,7 @@
         <div>
             <h4>Boiled Egg</h4>
             <img class="egg-image" src="assets/images/boiled-egg.jpg"
-                alt="Image of 3 boiled eggs. One cut in 2 halves and 2 whole." width="300px" height="200px">
+                alt="Image of 3 boiled eggs. One cut in 2 halves and 2 whole.">
             <table>
                 <tr>
                     <th class="white">What to Do</th>
@@ -383,6 +379,14 @@
             <h2>End Note</h2>
             <p>There we have it! I hope this little summary helped you understand the basics of cooking an egg. I wish
                 you all the best in the rest of your day and a peaceful mind. Happy egg cooking!</p>
+            <br>
+            <p
+                style="color: rgb(216, 216, 32); background-color: white; font-size: 150%; width: 90%; text-align: center;">
+                If
+                time allows
+                it,
+                check
+                out my socials.</p>
         </div>
     </section>
 
@@ -408,9 +412,9 @@
 
     </footer>
 
-</body>
+    <script src="https://kit.fontawesome.com/e62c0f3d3d.js" crossorigin="anonymous"></script>
 
-<script src="https://kit.fontawesome.com/e62c0f3d3d.js" crossorigin="anonymous"></script>
+</body>
 
 <!--All images were taken from https://stock.adobe.com-->
 
