Put inline-style of footer in css file

--- a/index.html
+++ b/index.html
@@ -380,8 +380,7 @@
             <p>There we have it! I hope this little summary helped you understand the basics of cooking an egg. I wish
                 you all the best in the rest of your day and a peaceful mind. Happy egg cooking!</p>
             <br>
-            <p
-                style="color: rgb(216, 216, 32); background-color: white; font-size: 150%; width: 90%; text-align: center;">
+            <p id="footer-p">
                 If
                 time allows
                 it,
