Adjust footer icons sizes and hover animation on different devices

--- a/index.html
+++ b/index.html
@@ -399,9 +399,10 @@
                     aria-label="Visit my Twitter page (opens in a new tab"><i class="fa-brands fa-twitter"
                         id="twitter"></i></a>
             </div>
-            <a href="https://youtube.com" target="_blank" rel="noopener"
+            <div><a href="https://youtube.com" target="_blank" rel="noopener"
                 aria-label="Visit my Youtube page (opens in a new tab"><i class="fa-brands fa-youtube"
                     id="youtube"></i></a>
+            </div>
             <div><a href="https://instagram.com" target="_blank" rel="noopener"
                     aria-label="Visit my Instagram page (opens in a new tab"><i class="fa-brands fa-instagram"
                         id="instagram"></i></a>
